# blog-api-2

./: pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
django_proj/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
